[package]
name = "fireplace"
version = "0.0.0"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>"]
edition = "2018"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", default-features = false, features = ["backend_drm", "backend_gbm", "backend_winit", "backend_libinput", "backend_session_logind", "backend_udev", "slog-stdlog", "wayland_frontend"] }
edid-rs = "0.1.0"

bitflags = "1"
linked-hash-map = "0.5.4"

slog = { version = "2.7" } #, features = ["max_level_trace"] }
slog-term = "2.8"
slog-async = "2.6"
slog-scope = "4.4"
slog-stdlog = "4.1"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

anyhow = "1.0.42"

xdg = "2.2.0"
xkbcommon = "0.4.0"

[build-dependencies]
gl_generator = "0.14"