[package]
name = "fireplace"
version = "1.0.0"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>"]
workspace = ".."

[dependencies]
fireplace_lib = { version = "1.0.0", default-features = false }
wlc = { version = "1.0.0", features = ["serialization"] }

slog = "1.5"
slog-term = "1.3"
slog-scope = "0.2"
slog-stdlog = "1.1"
slog-html = "0.1"
slog-stream = "1.2"
slog-journald = "1.0"

font-loader = { version = "0.1.0", optional = true }

serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"

[features]
default = ["ui", "static"]

static = ["wlc/static", "fireplace_lib/static"]
ui = ["fireplace_lib/conrod_ui", "font-loader"]
