[package]
name = "fireplace_lib"
version = "3.0.0"
authors = ["Drakulix <github@drakulix.de>"]
description = "Modular wayland window manager library"
documentation = "https://drakulix.github.io/fireplace"
repository = "https://github.com/Drakulix/fireplace/blob/master/fireplace_lib"
keywords = ["wayland", "compositor", "window"]
categories = ["rendering", "gui"]
readme = "README.md"
license = "MIT"
workspace = ".."

[badges]
travis-ci = { repository = "Drakulix/fireplace" }

[dependencies]
wlc = { version = "2.0.0", features = ["serialization"] }
anymap = "0.12"
typemap = "0.3"
linked-hash-map = "0.4"
id_tree = "1.0.0"

slog = "1.5"
slog-scope = "0.2"

conrod = { version = "0.51", optional = true, default-features = false, features = ["piston"] }
opengles_graphics = { version = "=0.1.0", optional = true }
piston2d-graphics = { version = "0.20", optional = true }
piston-texture = { version = "0.5", optional = true }
image = { version = "^0.12.1", optional = true }
egli = { version = "^0.2.1", optional = true }

font-loader = { version = "~0.1.4", optional = true }
chrono = { version = "0.3", optional = true }

serde = "0.9"
serde_derive = "0.9"

[features]
default = ["conrod_ui", "static"]

static = ["wlc/static"]
render = ["wlc/render", "image", "chrono"]
gl = ["egli", "opengles_graphics", "render"]
graphics = ["gl", "piston-texture", "piston2d-graphics"]
conrod_ui = ["graphics", "conrod", "font-loader"]
