[package]
name = "fireplace_code"
version = "1.1.1"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>"]
workspace = "../.."

[dependencies]
fireplace_lib = { version = "2.0.1" }
wlc = { version = "2.0.0", features = ["serialization"] }

slog = "1.4"
slog-term = "1.3"
slog-scope = "0.2"
slog-stdlog = "1.1"
slog-html = "0.1"
slog-stream = "1.2"
slog-journald = "1.0"
