[package]
name = "fireplace_json"
version = "3.1.1"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>"]
workspace = "../.."

[dependencies]
fireplace_lib = { version = "3.0.1", default-features = false }
wlc = { version = "2.0.1", features = ["serialization"] }

slog = "1.5"
slog-term = "1.3"
slog-scope = "0.2"
slog-stdlog = "1.1"
slog-html = "0.1"
slog-stream = "1.2"
slog-journald = "1.0"

font-loader = { version = "0.1.0", optional = true }

serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[features]
default = ["conrod_ui", "static"]

static = ["wlc/static", "fireplace_lib/static"]
conrod_ui = ["fireplace_lib/conrod_ui"]
